@@ -12,6 +12,7 @@ MACROS=						\
   gnome-undelfs.m4				\
   gnome-vfs.m4					\
   gnome-x-checks.m4				\
+  gnome-xml-check.m4				\
   gnome.m4					\
   linger.m4					\
   need-declaration.m4
